TreeWalk/lexer.cpp
/* Generated by re2c 1.3 on Wed Apr 15 14:48:41 2020 */

#define YYMAXFILL 9

#include "lexer.h"

#define YYPEEK() YYCURSOR < YYLIMIT ? string[YYCURSOR].unicode() : 0
#define YYSKIP() ++YYCURSOR
#define YYBACKUP() YYMARKER = YYCURSOR
#define YYBACKUPCTX() YYCTXMARKER = YYCURSOR
#define YYRESTORE() YYCURSOR = YYMARKER
#define YYRESTORECTX() YYCURSOR = YYCTXMARKER
#define YYRESTORERAG(t) YYCURSOR = t
#define YYLESSTHAN(n) YYLIMIT - YYCURSOR < n
#define YYSTAGP(t) t = YYCURSOR
#define YYSTAGPD(t) t = YYCURSOR - 1
#define YYSTAGN(t) t = -1

QVector<Token> lex(const QString &string) {
  QVector<Token> tokens;
  int yyt1;
  int yyt2;

  int YYCURSOR = 0;
  int YYMARKER, o1, o2;
  size_t last_line_loc = 0;
  size_t line = 1;
  const int YYLIMIT = string.size();
  do {
    o1 = 0;
    o2 = 0;

    {
      uint16_t yych;
      unsigned int yyaccept = 0;
      static const unsigned char yybm[] = {
          0,  16, 16, 16,  16,  16,  16,  16,  16,  80,  0,   16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 80, 16,  32,  16,  20,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 156, 156, 156, 156, 156, 156, 156, 156, 156, 156, 16, 16,
          16, 16, 16, 16,  16,  20,  20,  20,  20,  20,  20,  20,  20,  20, 20,
          20, 20, 20, 20,  20,  20,  20,  20,  20,  20,  20,  20,  20,  20, 20,
          20, 16, 0,  16,  16,  20,  16,  148, 148, 148, 148, 148, 148, 20, 20,
          20, 20, 20, 20,  20,  20,  20,  20,  20,  20,  20,  20,  20,  20, 20,
          20, 20, 20, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16, 16, 16, 16,  16,  16,  16,  16,  16,  16,  16,  16,  16,  16, 16,
          16,
      };
      yych = YYPEEK();
      switch (yych) {
      case '\t':
      case ' ':
        goto yy4;
      case '\n':
        YYSTAGP(yyt1);
        goto yy6;
      case '\r':
        YYSTAGP(yyt1);
        goto yy8;
      case '!':
        YYSTAGP(yyt1);
        goto yy9;
      case '"':
        YYSTAGP(yyt1);
        goto yy11;
      case '#':
        YYSTAGP(yyt1);
        goto yy12;
      case '$':
      case 'A':
      case 'B':
      case 'C':
      case 'D':
      case 'E':
      case 'F':
      case 'G':
      case 'H':
      case 'I':
      case 'J':
      case 'K':
      case 'L':
      case 'M':
      case 'N':
      case 'O':
      case 'P':
      case 'Q':
      case 'R':
      case 'S':
      case 'T':
      case 'U':
      case 'V':
      case 'W':
      case 'X':
      case 'Y':
      case 'Z':
      case 'a':
      case 'h':
      case 'j':
      case 'k':
      case 'l':
      case 'm':
      case 'o':
      case 'q':
      case 'v':
      case 'x':
      case 'y':
      case 'z':
        YYSTAGP(yyt1);
        goto yy13;
      case '&':
        YYSTAGP(yyt1);
        goto yy16;
      case '\'':
        YYSTAGP(yyt1);
        goto yy17;
      case '(':
        YYSTAGP(yyt1);
        goto yy19;
      case ')':
        YYSTAGP(yyt1);
        goto yy21;
      case '*':
        YYSTAGP(yyt1);
        goto yy23;
      case '+':
        YYSTAGP(yyt1);
        goto yy25;
      case ',':
        YYSTAGP(yyt1);
        goto yy27;
      case '-':
        YYSTAGP(yyt1);
        goto yy29;
      case '.':
        YYSTAGP(yyt1);
        goto yy31;
      case '/':
        YYSTAGP(yyt1);
        goto yy33;
      case '0':
      case '1':
      case '2':
      case '3':
      case '4':
      case '5':
      case '6':
      case '7':
      case '8':
      case '9':
        YYSTAGP(yyt1);
        goto yy35;
      case ';':
        YYSTAGP(yyt1);
        goto yy38;
      case '<':
        YYSTAGP(yyt1);
        goto yy40;
      case '=':
        YYSTAGP(yyt1);
        goto yy42;
      case '>':
        YYSTAGP(yyt1);
        goto yy44;
      case '_':
        YYSTAGP(yyt1);
        goto yy46;
      case '`':
        YYSTAGP(yyt1);
        goto yy47;
      case 'b':
        YYSTAGP(yyt1);
        goto yy49;
      case 'c':
        YYSTAGP(yyt1);
        goto yy50;
      case 'd':
        YYSTAGP(yyt1);
        goto yy51;
      case 'e':
        YYSTAGP(yyt1);
        goto yy52;
      case 'f':
        YYSTAGP(yyt1);
        goto yy53;
      case 'g':
        YYSTAGP(yyt1);
        goto yy54;
      case 'i':
        YYSTAGP(yyt1);
        goto yy55;
      case 'n':
        YYSTAGP(yyt1);
        goto yy56;
      case 'p':
        YYSTAGP(yyt1);
        goto yy57;
      case 'r':
        YYSTAGP(yyt1);
        goto yy58;
      case 's':
        YYSTAGP(yyt1);
        goto yy59;
      case 't':
        YYSTAGP(yyt1);
        goto yy60;
      case 'u':
        YYSTAGP(yyt1);
        goto yy61;
      case 'w':
        YYSTAGP(yyt1);
        goto yy62;
      case '{':
        YYSTAGP(yyt1);
        goto yy63;
      case '|':
        YYSTAGP(yyt1);
        goto yy65;
      case '}':
        YYSTAGP(yyt1);
        goto yy66;
      default:
        goto yy2;
      }
    yy2:
      YYSKIP();
    yy3 : {
      tokens.push_back(Token{TokenType::Unknown, QString(""),
                             YYCURSOR - last_line_loc, line});
      continue;
    }
    yy4:
      YYSKIP();
      { continue; }
    yy6:
      YYSKIP();
      YYSTAGP(yyt2);
    yy7:
      o1 = yyt1;
      o2 = yyt2;
      {
        line++;
        last_line_loc = o1;
        continue;
      }
    yy8:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '\n')
        goto yy6;
      YYSTAGP(yyt2);
      goto yy7;
    yy9:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '=')
        goto yy68;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(Token{TokenType::Not, temp, o1 - last_line_loc, line});
        continue;
      }
    yy11:
      yyaccept = 0;
      YYSKIP();
      YYBACKUP();
      yych = YYPEEK();
      if (yych <= 0x0000)
        goto yy3;
      if (yych == '\n')
        goto yy3;
      goto yy71;
    yy12:
      yyaccept = 0;
      YYSKIP();
      YYBACKUP();
      yych = YYPEEK();
      if (yych <= '[') {
        if (yych == '(')
          goto yy77;
        goto yy3;
      } else {
        if (yych <= '\\')
          goto yy79;
        if (yych == 'u')
          goto yy80;
        goto yy3;
      }
    yy13:
      YYSKIP();
      yych = YYPEEK();
    yy14:
      if (yych & ~0xFF) {
        YYSTAGP(yyt2);
        goto yy15;
      } else if (yybm[0 + yych] & 4) {
        goto yy13;
      }
      YYSTAGP(yyt2);
    yy15:
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Identifier, temp, o1 - last_line_loc, line});
        continue;
      }
    yy16:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '&')
        goto yy81;
      goto yy3;
    yy17:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::SingleQuote, temp, o1 - last_line_loc, line});
        continue;
      }
    yy19:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::LeftParen, temp, o1 - last_line_loc, line});
        continue;
      }
    yy21:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::RightParen, temp, o1 - last_line_loc, line});
        continue;
      }
    yy23:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Star, temp, o1 - last_line_loc, line});
        continue;
      }
    yy25:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '+')
        goto yy83;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Plus, temp, o1 - last_line_loc, line});
        continue;
      }
    yy27:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '@')
        goto yy85;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Comma, temp, o1 - last_line_loc, line});
        continue;
      }
    yy29:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '-')
        goto yy87;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Minus, temp, o1 - last_line_loc, line});
        continue;
      }
    yy31:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '=')
        goto yy89;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Period, temp, o1 - last_line_loc, line});
        continue;
      }
    yy33:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Divide, temp, o1 - last_line_loc, line});
        continue;
      }
    yy35:
      YYSKIP();
      yych = YYPEEK();
      if (yych & ~0xFF) {
        YYSTAGP(yyt2);
        goto yy37;
      } else if (yybm[0 + yych] & 8) {
        goto yy35;
      }
      if (yych == '.')
        goto yy91;
      YYSTAGP(yyt2);
    yy37:
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Number, temp, o1 - last_line_loc, line});
        continue;
      }
    yy38:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Semicolon, temp, o1 - last_line_loc, line});
        continue;
      }
    yy40:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '=')
        goto yy93;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Lesser, temp, o1 - last_line_loc, line});
        continue;
      }
    yy42:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '=')
        goto yy95;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Assign, temp, o1 - last_line_loc, line});
        continue;
      }
    yy44:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '=')
        goto yy97;
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::Greater, temp, o1 - last_line_loc, line});
        continue;
      }
    yy46:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '_')
        goto yy99;
      goto yy14;
    yy47:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::BackTick, temp, o1 - last_line_loc, line});
        continue;
      }
    yy49:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'r')
        goto yy100;
      goto yy14;
    yy50:
      YYSKIP();
      yych = YYPEEK();
      if (yych <= 'k') {
        if (yych == 'a')
          goto yy101;
        goto yy14;
      } else {
        if (yych <= 'l')
          goto yy102;
        if (yych == 'o')
          goto yy103;
        goto yy14;
      }
    yy51:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'o')
        goto yy104;
      goto yy14;
    yy52:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'l')
        goto yy106;
      if (yych == 'n')
        goto yy107;
      goto yy14;
    yy53:
      YYSKIP();
      yych = YYPEEK();
      if (yych <= 'n') {
        if (yych == 'a')
          goto yy108;
        goto yy14;
      } else {
        if (yych <= 'o')
          goto yy109;
        if (yych == 'u')
          goto yy110;
        goto yy14;
      }
    yy54:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'l')
        goto yy111;
      goto yy14;
    yy55:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'f')
        goto yy112;
      goto yy14;
    yy56:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'i')
        goto yy114;
      goto yy14;
    yy57:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'r')
        goto yy115;
      goto yy14;
    yy58:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'e')
        goto yy116;
      goto yy14;
    yy59:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'u')
        goto yy117;
      if (yych == 'w')
        goto yy118;
      goto yy14;
    yy60:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'h')
        goto yy119;
      if (yych == 'r')
        goto yy120;
      goto yy14;
    yy61:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'n')
        goto yy121;
      goto yy14;
    yy62:
      YYSKIP();
      yych = YYPEEK();
      if (yych == 'h')
        goto yy122;
      goto yy14;
    yy63:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::LeftBrace, temp, o1 - last_line_loc, line});
        continue;
      }
    yy65:
      YYSKIP();
      yych = YYPEEK();
      if (yych == '|')
        goto yy123;
      goto yy3;
    yy66:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::RightBrace, temp, o1 - last_line_loc, line});
        continue;
      }
    yy68:
      YYSKIP();
      YYSTAGP(yyt2);
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::BangEqual, temp, o1 - last_line_loc, line});
        continue;
      }
    yy70:
      YYSKIP();
      yych = YYPEEK();
    yy71:
      if (yych & ~0xFF) {
        goto yy70;
      } else if (yybm[0 + yych] & 16) {
        goto yy70;
      }
      if (yych <= '\n')
        goto yy72;
      if (yych <= '"')
        goto yy73;
      goto yy76;
    yy72:
      YYRESTORE();
      if (yyaccept == 0) {
        goto yy3;
      } else {
        YYSTAGP(yyt2);
        goto yy75;
      }
    yy73:
      yyaccept = 1;
      YYSKIP();
      YYBACKUP();
      yych = YYPEEK();
      if (yych & ~0xFF) {
        goto yy70;
      } else if (yybm[0 + yych] & 16) {
        goto yy70;
      }
      if (yych <= '\n') {
        YYSTAGP(yyt2);
        goto yy75;
      }
      if (yych <= '"')
        goto yy73;
      goto yy76;
    yy75:
      o1 = yyt1;
      o2 = yyt2;
      {
        auto len = o2 - o1;
        auto temp = string.mid(o1, len);
        tokens.push_back(
            Token{TokenType::String, temp, o1 - last_line_loc, line});
        continue;
      }
    yy76:
      YYSKIP();
      yych = YYPEEK();
      if (yych & ~0xFF) {
        goto yy72;
      } else {
        static void *yytarget[256] = {
            &&yy72,  &&yy72,  &&yy72, &&yy72, &&yy72, &&yy72,  &&yy72, &&yy72,
            &&yy72,  &&yy125, &&yy70, &&yy72, &&yy72, &&yy127, &&yy72, &&yy72,
            &&yy72,  &&yy72,  &&yy72, &&yy72, &&yy72, &&yy72,  &&yy72, &&yy72,
            &&yy72,  &&yy72,  &&yy72, &&yy72, &&yy72, &&yy72,  &&yy72, &&yy72,
            &&yy125, &&yy72,  &&yy70, &&yy72, &&yy72, &&yy72,  &&yy72, &&yy72,
